kubernetes-networks/dashboard/dashboard-ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
  namespace: kubernetes-dashboard
spec:
  tls:
     - hosts:
       - dashboard.example.com
       secretName: kubernetes-dashboard-certs 

  rules:
  - host: "dashboard"
    http:
      paths:
      - path: /dashboard
        pathType: Prefix
        backend:
           service:
              name: kubernetes-dashboard
              port:
                number: 443
